--- a/pom.xml
+++ b/pom.xml
@@ -1,13 +1,88 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-<!--  NOTE run mvn site with  MAVEN_OPTS -Xms32m -Xmx256m -->	
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+	<!--  NOTE run mvn site with  MAVEN_OPTS -Xms32m -Xmx256m -->
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.risktx</groupId>
 	<artifactId>risktx-acord-ws</artifactId>
 	<packaging>war</packaging>
 	<version>1.0-SNAPSHOT</version>
-	<name>risktx-acord-ws Maven Webapp</name>
-	<url>http://maven.apache.org</url>
+	<name>RiskTx Maven Webapp</name>
+	<description/>
+	<url>http://risktx.org</url>
+	<prerequisites>
+		<maven/>
+	</prerequisites>
+	<issueManagement>
+		<system>Lighthouse</system>
+		<url>http://risktx.lighthouseapp.com/projects/23596-risktx/overview</url>
+	</issueManagement>
+	<ciManagement>
+		<system/>
+		<url/>
+		<notifiers>
+			<notifier>
+				<type/>
+				<sendOnError/>
+				<sendOnFailure/>
+				<sendOnSuccess/>
+				<sendOnWarning/>
+				<address/>
+				<configuration/>
+			</notifier>
+		</notifiers>
+	</ciManagement>
+	<inceptionYear/>
+	<mailingLists>
+		<mailingList>
+			<name/>
+			<subscribe/>
+			<unsubscribe/>
+			<post/>
+			<archive/>
+			<otherArchives/>
+		</mailingList>
+	</mailingLists>
+	<developers>
+		<developer>
+			<id/>
+			<name/>
+			<email/>
+			<url/>
+			<organization/>
+			<organizationUrl/>
+			<roles/>
+			<timezone/>
+			<properties/>
+		</developer>
+	</developers>
+	<contributors>
+		<contributor>
+			<name/>
+			<email/>
+			<url/>
+			<organization/>
+			<organizationUrl/>
+			<roles/>
+			<timezone/>
+			<properties/>
+		</contributor>
+	</contributors>
+	<licenses>
+		<license>
+			<name/>
+			<url/>
+			<distribution/>
+			<comments/>
+		</license>
+	</licenses>
+	<scm>
+		<connection>scm:git:git://github.com/risktx/risktx.git</connection>
+		<developerConnection>scm:git:git://github.com/risktx/risktx.git</developerConnection>
+		<url>http://github.com/risktx/risktx/tree/master</url>
+	</scm>
+	<organization>
+		<name>RiskTx</name>
+		<url>http://risktx.org/</url>
+	</organization>
 	<build>
 		<finalName>${artifactId}</finalName>
 		<resources>
@@ -15,36 +90,53 @@
 		<plugins>
 		</plugins>
 	</build>
- <!-- plugins for creating site reports -->
-    <reporting>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-eclipse-plugin</artifactId>
-                <version>${eclipsePluginVersion}</version>
-                <configuration>
-                    <!-- by default download all sources when generating project files -->
-                    <downloadSources>true</downloadSources>
-                    <classpathContainers>
-                        <classpathContainer>org.eclipse.jdt.launching.JRE_CONTAINER/${vmtype}/${jdk15Name}
+	<!-- plugins for creating site reports -->
+	<reporting>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-eclipse-plugin</artifactId>
+				<version>${eclipsePluginVersion}</version>
+				<configuration>
+					<!-- by default download all sources when generating project files -->
+					<downloadSources>true</downloadSources>
+					<classpathContainers>
+						<classpathContainer>org.eclipse.jdt.launching.JRE_CONTAINER/${vmtype}/${jdk15Name}
                         </classpathContainer>
-                    </classpathContainers>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>jdepend-maven-plugin</artifactId>
-            </plugin>
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>findbugs-maven-plugin</artifactId>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-pmd-plugin</artifactId>
-            </plugin>
-        </plugins>
-    </reporting>
+					</classpathContainers>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>jdepend-maven-plugin</artifactId>
+			</plugin>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>findbugs-maven-plugin</artifactId>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-pmd-plugin</artifactId>
+			</plugin>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>cobertura-maven-plugin</artifactId>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-javadoc-plugin</artifactId>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-report-plugin</artifactId>
+				<version>2.4.2</version>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-checkstyle-plugin</artifactId>
+			</plugin>
+		</plugins>
+	</reporting>
 	<dependencies>
 		<dependency>
 			<groupId>junit</groupId>
@@ -142,27 +234,27 @@
 			<artifactId>commons-logging</artifactId>
 			<version>${commons-logging-version}</version>
 		</dependency>
-              <dependency>
-                  <groupId>org.mule.tests</groupId>
-                  <artifactId>mule-tests-functional</artifactId>
+		<dependency>
+			<groupId>org.mule.tests</groupId>
+			<artifactId>mule-tests-functional</artifactId>
 			<version>${mule-version}</version>
-                  <scope>test</scope>
-              </dependency>
-        <dependency>
-            <groupId>mockobjects</groupId>
-            <artifactId>mockobjects-core</artifactId>
-            <version>0.09</version>
-            <scope>test</scope>
-        </dependency>
-        <!--  icu4j dependency added to prevent mvn site error due to a byte code
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>mockobjects</groupId>
+			<artifactId>mockobjects-core</artifactId>
+			<version>0.09</version>
+			<scope>test</scope>
+		</dependency>
+		<!--  icu4j dependency added to prevent mvn site error due to a byte code
         	  issue in version 2.6.1 caused by an Axis2-Jaxen-XOM dependency
         	  This dependancy will push up the ic4u version resolving the issue -->
-        <dependency>
-        	<groupId>com.ibm.icu</groupId>
-        	<artifactId>icu4j</artifactId>
-        	<version>3.8</version>
-        	<scope>test</scope>
-        </dependency>
+		<dependency>
+			<groupId>com.ibm.icu</groupId>
+			<artifactId>icu4j</artifactId>
+			<version>3.8</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 	<dependencyManagement>
 		<dependencies>
@@ -179,24 +271,23 @@
 		<spring-version>2.5.3</spring-version>
 		<mule-version>2.0.2</mule-version>
 		<commons-logging-version>1.1</commons-logging-version>
-                <eclipsePluginVersion>2.5</eclipsePluginVersion>
-                <vmtype>org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType</vmtype>
-                <jdk5Name>jdk5</jdk5Name>
-                <jdk.version>1.5</jdk.version>
+		<eclipsePluginVersion>2.5</eclipsePluginVersion>
+		<vmtype>org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType</vmtype>
+		<jdk5Name>jdk5</jdk5Name>
+		<jdk.version>1.5</jdk.version>
 	</properties>
-        <repositories>
-        <repository>
-            <id>muleforge-repo</id>
-            <name>MuleForge Repository</name>
-            <url>http://repository.muleforge.org</url>
-            <layout>default</layout>
-        </repository>
-
-        <repository>
-            <id>codehaus-repo</id>
-            <name>Codehaus Repository</name>
-            <url>http://dist.codehaus.org/mule/dependencies/maven2</url>
-            <layout>default</layout>
-        </repository>
-            </repositories>
+	<repositories>
+		<repository>
+			<id>muleforge-repo</id>
+			<name>MuleForge Repository</name>
+			<url>http://repository.muleforge.org</url>
+			<layout>default</layout>
+		</repository>
+		<repository>
+			<id>codehaus-repo</id>
+			<name>Codehaus Repository</name>
+			<url>http://dist.codehaus.org/mule/dependencies/maven2</url>
+			<layout>default</layout>
+		</repository>
+	</repositories>
 </project>
