--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -6,7 +6,7 @@ log4j.appender.A1.layout=org.apache.log4j.PatternLayout
 log4j.appender.A1.layout.ConversionPattern=[%d{MM-dd HH:mm:ss}] %-5p %c{1} [%t]: %m%n
 
 log4j.appender.R=org.apache.log4j.DailyRollingFileAppender
-log4j.appender.R.File=C:/dev/servers/apache-tomcat-6.0.18/logs/risktx.log
+log4j.appender.R.File=risktx.log
 log4j.appender.R.layout=org.apache.log4j.PatternLayout
 log4j.appender.R.layout.ConversionPattern=[%d{MM-dd HH:mm:ss}] %-5p %c{1} [%t]: %m%n
 
