--- a/pom.xml
+++ b/pom.xml
@@ -66,9 +66,9 @@
             <version>1.0</version>
         </dependency>
         <dependency>
-            <groupId>org.apache.derby</groupId>
-            <artifactId>derby</artifactId>
-            <version>10.4.2.0</version>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>1.1.119</version>
         </dependency>
         <dependency>
             <groupId>javax.servlet</groupId>
