Started putting the webapp back together, now has Lift boot and Axis2 service, not linked to domain model yet...

--- a/project/build.properties
+++ b/project/build.properties
@@ -1,4 +1,4 @@
-project.name=RiskTx Open Source Insurance Gateway
+project.name=RiskTx
 project.organization=RiskTx
 scala.version=2.7.7
 project.version=0.1
