added integration-test support to sbt def'n, added SOAP messaging back in, more domain/service stuff... now does basic send/receive

--- a/.gitignore
+++ b/.gitignore
@@ -6,5 +6,9 @@ project/boot/
 risktx.iws
 risktx.iml
 risktx.ipr
+RiskTx.iml
+RiskTx.ipr
+RiskTx.iws
+project/sbt_project_definition.iml
 default.props
 project/plugins/project/
