--- a/src/main/resources/akka.conf
+++ b/src/main/resources/akka.conf
@@ -1,7 +1,3 @@
-####################
-# Akka Config File #
-####################
-
 <log>
   filename = "./logs/akka.log"
   roll = "daily"  # Options: never, hourly, daily, sunday/monday/...
@@ -14,12 +10,8 @@
 <akka>
   version = "0.7.1"
 
-  # FQN to the class doing initial active object/actor
-  # supervisor bootstrap, should be defined in default constructor
-  boot = ["sample.camel.Boot",
-          "sample.java.Boot",
-          "sample.scala.Boot",
-          "se.scalablesolutions.akka.security.samples.Boot"]
+  # Call back to RiskTX Bootstrap Class
+  boot = ["org.risktx.bootstrap.akka.RiskTxAkkaBoot"]
 
   <actor>
     timeout = 5000              # default timeout for future based invocations
@@ -42,6 +34,30 @@
     authenticator = "se.scalablesolutions.akka.security.samples.BasicAuthenticationService" # The authentication service to use
   </rest>
 
+ <remote>
+    compression-scheme = "zlib" # Options: "zlib" (lzf to come), leave out for no compression
+    zlib-compression-level = 6  # Options: 0-9 (1 being fastest and 9 being the most compressed), default is 6
+
+    <cluster>
+      service = on
+      name = "default"                                                        # The name of the cluster
+      actor = "se.scalablesolutions.akka.cluster.jgroups.JGroupsClusterActor" # FQN of an implementation of ClusterActor
+      serializer = "se.scalablesolutions.akka.serialization.Serializer$Java$" # FQN of the serializer class
+    </cluster>
+
+    <server>
+      service = on
+      hostname = "localhost"
+      port = 9999
+      connection-timeout = 1000 # in millis (1 sec default)
+    <server>
+
+    <client>
+      reconnect-delay = 5000    # in millis (5 sec default)
+      read-timeout = 10000      # in millis (10 sec default)
+    <client>
+  </remote>
+
   <storage>
     <mongodb>
       hostname = "127.0.0.1"        # IP address or hostname of the MongoDB DB instance
@@ -50,3 +66,7 @@
     </mongodb>
   </storage>
 </akka>
+
+
+<akka>
+
