Fixed AKKA install, Actors and REST now working

--- a/src/main/resources/akka.conf
+++ b/src/main/resources/akka.conf
@@ -11,7 +11,7 @@
   version = "0.7.1"
 
   # Call back to RiskTX Bootstrap Class
-  boot = ["org.risktx.bootstrap.akka.RiskTxAkkaBoot"]
+  boot = ["org.risktx.service.AkkaBoot"]
 
   <actor>
     timeout = 5000              # default timeout for future based invocations
@@ -30,8 +30,8 @@
     service = on
     hostname = "localhost"
     port = 9998
-    filters = ["se.scalablesolutions.akka.security.AkkaSecurityFilterFactory"]              # List with all jersey filters to use
-    authenticator = "se.scalablesolutions.akka.security.samples.BasicAuthenticationService" # The authentication service to use
+    filters = ["se.scalablesolutions.akka.security.AkkaSecurityFilterFactory"]  # List with all jersey filters to use
+    authenticator = "org.risktx.service.BasicAuthenticationService"             # The authentication service to use
   </rest>
 
  <remote>
@@ -60,13 +60,9 @@
 
   <storage>
     <mongodb>
-      hostname = "127.0.0.1"        # IP address or hostname of the MongoDB DB instance
+      hostname = "127.0.0.1"    # IP address or hostname of the MongoDB DB instance
       port = 27017
       dbname = "risktx"
     </mongodb>
   </storage>
 </akka>
-
-
-<akka>
-
