--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -5,7 +5,7 @@
     <listener>
         <listener-class>se.scalablesolutions.akka.kernel.Kernel</listener-class>
     </listener>
-<!--
+
     <filter>
         <filter-name>LiftFilter</filter-name>
         <display-name>Lift Filter</display-name>
@@ -24,12 +24,11 @@
         <servlet-class>org.apache.axis2.transport.http.AxisServlet</servlet-class>
         <load-on-startup>1</load-on-startup>
     </servlet>
-    -->
+
     <servlet>
         <servlet-name>akka</servlet-name>
-        <!-- Previous REST only Akka Servlet -->
-        <!-- <servlet-class>se.scalablesolutions.akka.rest.AkkaServlet</servlet-class> -->
         <servlet-class>se.scalablesolutions.akka.comet.AkkaServlet</servlet-class>
+        <load-on-startup>2</load-on-startup>
     </servlet>
 
     <servlet-mapping>
@@ -37,11 +36,8 @@
         <url-pattern>/akka/*</url-pattern>
     </servlet-mapping>
 
-       <!--
     <servlet-mapping>
         <servlet-name>AxisServlet</servlet-name>
         <url-pattern>/services/*</url-pattern>
     </servlet-mapping>
-           -->
-
 </web-app>
