Added Sitemap back in for menus to access Akka Rest Demo
Also added UI for the Ping Message back in, ready for use with the
new domain model and an Akka Actor implementation

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -33,7 +33,7 @@
 
     <servlet-mapping>
         <servlet-name>akka</servlet-name>
-        <url-pattern>/akka/*</url-pattern>
+        <url-pattern>/rest/*</url-pattern>
     </servlet-mapping>
 
     <servlet-mapping>
