Compiles but still won't run, Kernel now removed

--- a/src/main/resources/akka.conf
+++ b/src/main/resources/akka.conf
@@ -6,9 +6,11 @@ akka {
   # These boot classes are loaded (and created) automatically when the Akka Microkernel boots up
   #     Can be used to bootstrap your application(s)
   #     Should be the FQN (Fully Qualified Name) of the boot class which needs to have a default constructor
-  boot = ["org.risktx.service.AkkaBoot"]
+  boot = ["sample.camel.Boot",
+          "sample.rest.java.Boot",
+          "sample.rest.scala.Boot",
+          "sample.security.Boot"]
 
-# "sample.camel.Boot","sample.rest.java.Boot","sample.rest.scala.Boot","sample.security.Boot",
 
   actor {
     timeout = 5                        # Default timeout for Future based invocations
@@ -64,13 +66,9 @@ akka {
     hostname = "localhost"
     port = 9998
     filters = ["se.scalablesolutions.akka.security.AkkaSecurityFilterFactory"] # List with all jersey filters to use
-    resource_packages = ["org.risktx.service"]  # List with all resource packages for your Jersey services
-
-# from 0.7.1 #
-#    authenticator = "org.risktx.service.BasicAuthenticationService"             # The authentication service to use
-
-# "sample.rest.scala","sample.rest.java","sample.security",
-
+    resource_packages = ["sample.rest.scala",
+                         "sample.rest.java",
+                         "sample.security"]  # List with all resource packages for your Jersey services
     authenticator = "sample.security.BasicAuthenticationService" # The authentication service to use. Need to be overridden (sample now)
 
     comet-dispatcher {
@@ -129,7 +127,7 @@ akka {
 
   storage {
     mongodb {
-      hostname = "127.0.0.1"        # IP address or hostname of the MongoDB DB instance
+      hostname = "localhost"        # IP address or hostname of the MongoDB DB instance
       port = 27017                  # Port to MongoDB
       dbname = "risktx"
     }
