--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="ISO-8859-1"?>
-<!DOCTYPE web-app PUBLIC "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
-        "http://java.sun.com/dtd/web-app_2_3.dtd">
-<web-app>
-    <listener>
-        <listener-class>se.scalablesolutions.akka.kernel.Kernel</listener-class>
-    </listener>
+<web-app xmlns="http://java.sun.com/xml/ns/j2ee"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd"
+         version="2.4">
 
+    <display-name>RiskTx</display-name>
+<!--
     <filter>
         <filter-name>LiftFilter</filter-name>
         <display-name>Lift Filter</display-name>
@@ -24,20 +24,20 @@
         <servlet-class>org.apache.axis2.transport.http.AxisServlet</servlet-class>
         <load-on-startup>1</load-on-startup>
     </servlet>
-
+       -->
     <servlet>
-        <servlet-name>akka</servlet-name>
+        <servlet-name>AkkaServlet</servlet-name>
         <servlet-class>se.scalablesolutions.akka.comet.AkkaServlet</servlet-class>
-        <load-on-startup>2</load-on-startup>
     </servlet>
 
     <servlet-mapping>
-        <servlet-name>akka</servlet-name>
+        <servlet-name>AkkaServlet</servlet-name>
         <url-pattern>/rest/*</url-pattern>
     </servlet-mapping>
-
+<!--
     <servlet-mapping>
         <servlet-name>AxisServlet</servlet-name>
         <url-pattern>/services/*</url-pattern>
     </servlet-mapping>
+    -->
 </web-app>
