Fixed s280 Branch, now compiles and runs

--- a/src/main/resources/akka.conf
+++ b/src/main/resources/akka.conf
@@ -6,10 +6,7 @@ akka {
   # These boot classes are loaded (and created) automatically when the Akka Microkernel boots up
   #     Can be used to bootstrap your application(s)
   #     Should be the FQN (Fully Qualified Name) of the boot class which needs to have a default constructor
-  boot = ["sample.camel.Boot",
-          "sample.rest.java.Boot",
-          "sample.rest.scala.Boot",
-          "sample.security.Boot"]
+  boot = ["org.risktx.service.Boot"]
 
 
   actor {
@@ -66,10 +63,8 @@ akka {
     hostname = "localhost"
     port = 9998
     filters = ["se.scalablesolutions.akka.security.AkkaSecurityFilterFactory"] # List with all jersey filters to use
-    resource_packages = ["sample.rest.scala",
-                         "sample.rest.java",
-                         "sample.security"]  # List with all resource packages for your Jersey services
-    authenticator = "sample.security.BasicAuthenticationService" # The authentication service to use. Need to be overridden (sample now)
+    resource_packages = ["org.risktx.service"]  # List with all resource packages for your Jersey services
+    authenticator = "org.risktx.service.BasicAuthenticationService" # The authentication service to use. Need to be overridden (sample now)
 
     comet-dispatcher {
       #type = "Hawt" # Uncomment if you want to use a different dispatcher than the default one for Comet
