Changed Lift Boot to use akka.conf for MongoDB settings, requires extra user and password field in akka.conf as follows:
  storage {
    mongodb {
      hostname = "localhost"        # IP address or hostname of the MongoDB DB instance
      port = 27017                  # Port to MongoDB
      dbname = "risktx"
      user = "risktx"
      password = "risktx"
    }

--- a/src/main/resources/akka.conf
+++ b/src/main/resources/akka.conf
@@ -125,6 +125,8 @@ akka {
       hostname = "localhost"        # IP address or hostname of the MongoDB DB instance
       port = 27017                  # Port to MongoDB
       dbname = "risktx"
+      user = "risktx"
+      password = "risktx"
     }
   }
 }
