Changes to use to Akka 1.0-M1

--- a/src/main/resources/akka.conf
+++ b/src/main/resources/akka.conf
@@ -1,5 +1,5 @@
 akka {
-  version = "0.10" # Akka version, checked against the runtime version of Akka.
+  version = "1.0-M1" # Akka version, checked against the runtime version of Akka.
 
   time-unit = "seconds" # Default timeout time unit for all timeout properties throughout the config
 
@@ -8,7 +8,6 @@ akka {
   #     Should be the FQN (Fully Qualified Name) of the boot class which needs to have a default constructor
   boot = ["org.risktx.service.Boot"]
 
-
   actor {
     timeout = 5                        # Default timeout for Future based invocations
                                        #    - Actor:        !! && !!!
@@ -16,6 +15,7 @@ akka {
                                        #    - TypedActor:   methods with non-void return type
     serialize-messages = off           # Does a deep clone of (non-primitive) messages to ensure immutability
     throughput = 5                     # Default throughput for all ExecutorBasedEventDrivenDispatcher, set to 1 for complete fairness
+    throughput-deadline-time = -1      # Default throughput deadline for all ExecutorBasedEventDrivenDispatcher, set to 0 or negative for no deadline
 
     default-dispatcher {
       type = "GlobalExecutorBasedEventDriven" # Must be one of the following, all "Global*" are non-configurable
@@ -28,27 +28,42 @@ akka {
                                               #   - GlobalExecutorBasedEventDriven
                                               #   - GlobalReactorBasedSingleThreadEventDriven
                                               #   - GlobalReactorBasedThreadPoolEventDriven
-      keep-alive-ms = 60000            # Keep alive time for threads
+      keep-alive-time = 60             # Keep alive time for threads
       core-pool-size-factor = 1.0      # No of core threads ... ceil(available processors * factor)
       max-pool-size-factor  = 4.0      # Max no of threads ... ceil(available processors * factor)
       executor-bounds = -1             # Makes the Executor bounded, -1 is unbounded
       allow-core-timeout = on          # Allow core threads to time out
       rejection-policy = "caller-runs" # abort, caller-runs, discard-oldest, discard
       throughput = 5                   # Throughput for ExecutorBasedEventDrivenDispatcher, set to 1 for complete fairness
+      throughput-deadline-time = -1    # Throughput deadline for ExecutorBasedEventDrivenDispatcher, set to 0 or negative for no deadline
       aggregate = off                  # Aggregate on/off for HawtDispatchers
       mailbox-capacity = -1            # If negative (or zero) then an unbounded mailbox is used (default)
                                        # If positive then a bounded mailbox is used and the capacity is set using the property
                                        # NOTE: setting a mailbox to 'blocking' can be a bit dangerous,
                                        #       could lead to deadlock, use with care
+                                       #
+                                       # The following are only used for ExecutorBasedEventDriven
+                                       # and only if mailbox-capacity > 0
+      mailbox-push-timeout-time = 10   # Specifies the timeout to add a new message to a mailbox that is full - negative number means infinite timeout                                      
+                                       #       (in unit defined by the time-unit property)
     }
   }
 
   stm {
-    fair = on             # Should global transactions be fair or non-fair (non fair yield better performance)
-    jta-aware = off       # Option 'on' means that if there JTA Transaction Manager available then the STM will
-                          #     begin (or join), commit or rollback the JTA transaction. Default is 'off'.
-    timeout = 5           # Default timeout for blocking transactions and transaction set (in unit defined by
-                          #     the time-unit property)
+    fair             = on     # Should global transactions be fair or non-fair (non fair yield better performance)
+    max-retries      = 1000
+    timeout          = 5      # Default timeout for blocking transactions and transaction set (in unit defined by
+                              #     the time-unit property)
+    write-skew       = true
+    blocking-allowed = false
+    interruptible    = false
+    speculative      = true
+    quick-release    = true
+    propagation      = "requires"
+    trace-level      = "none"
+    hooks            = true
+    jta-aware        = off    # Option 'on' means that if there JTA Transaction Manager available then the STM will
+                              #     begin (or join), commit or rollback the JTA transaction. Default is 'off'.
   }
 
   jta {
@@ -128,5 +143,9 @@ akka {
       user = "risktx"
       password = "risktx"
     }
+  }
+
+  camel {
+    service = on
   }
 }
